--- a/web developer/css/style.css
+++ b/web developer/css/style.css
@@ -36,6 +36,22 @@ body {
     width: 100%;
 }
 
+.nav {
+ list-style-type: none;
+ padding-left: 0%;
+ margin: 0;
+ display: flex;
+ justify-content: space-between;
+
+}
+
+.nav-item {
+
+    padding-left: 16px;
+    padding-right: 16px;
+
+}
+
 .nav-link {
     text-decoration: none;
     color:#010101;
