--- a/web developer/css/style.css
+++ b/web developer/css/style.css
@@ -36,20 +36,29 @@ body {
     width: 100%;
 }
 
+header {
+
+    display: flex;
+}
+
 .nav {
  list-style-type: none;
  padding-left: 0%;
  margin: 0;
  display: flex;
- justify-content: space-between;
-
 }
+
 
 .nav-item {
 
     padding-left: 16px;
     padding-right: 16px;
 
+}
+
+.nav-item:first-child {
+
+    padding-left: none;
 }
 
 .nav-link {
