--- a/web developer/css/style.css
+++ b/web developer/css/style.css
@@ -5,6 +5,7 @@ body {
 
 }
 
+
 .light {
 
     background-color: #F3F2F0;
@@ -20,7 +21,7 @@ body {
 
 .dark {
 
-    background-color: #010101;
+    background-color: #232326; 
     color: #F3F2F0;
 }
 
@@ -29,6 +30,62 @@ body {
     color:#F3F2F0;
    
 }
+
+.dark .circle circle {
+    fill: #D40000;
+}
+
+.light .circle circle {
+    fill: #fff;
+}
+
+.dark .triangle path {
+    fill: #fff;
+}
+
+.light .triangle path {
+    fill: #D40000;
+}
+
+.dark .social {
+
+    border-bottom: 1px solid #F3F2F0;
+   
+}
+
+.light .social, 
+.light .steps-item,
+.light .about-title,
+.light .about-description {
+
+    border-bottom: 1px solid #010101;
+   
+}
+
+.dark .social, 
+.dark .steps-item,
+.dark .about-title,
+.dark .about-description {
+
+    border-bottom: 1px solid #F3F2F0;
+   
+}
+.light .steps-item:first-child {
+
+    border-top: 1px solid #010101;
+}
+
+.dark .steps-item:first-child {
+
+    border-top: 1px solid #F3F2F0;
+}
+
+.dark .about-title, .dark .about-description {
+ 
+
+}
+
+
 
 .wrapper {
 
@@ -39,10 +96,30 @@ body {
     
 }
 
-.name {
+header {
 
-    font-size: 28px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
     
+}
+
+.name {
+    position: relative;
+    font-size: 28px;
+    z-index: 3;
+    
+}
+
+.main {
+ position: relative;
+
+}
+
+.main .title-h1 {
+    position: relative;
+    z-index: 4;
 }
 
 .title-h1 {
@@ -61,13 +138,8 @@ body {
 
     margin-bottom: 120px;
     width: 100%;
+    
    
-}
-
-header {
-
-    padding-top: 40px;
-    padding-bottom: 40px;
 }
 
 .nav {
@@ -87,7 +159,7 @@ header {
 
 .nav-item:first-child {
 
-    padding-left: none;
+    padding-left: 0;
 }
 
 .nav-item:last-child {
@@ -106,16 +178,40 @@ header {
     color: #D40000;
 }
 
+.nav-info .nav-item {
+    position: relative;
+}
+.nav-info .nav-item::before {
+    content: '';
+    display: block;
+    width: 1px;
+    height: 24px;
+    background-color: rgba(1, 1, 1, 100%);
+    opacity: 20%;
+    position: absolute;
+    left: 0;
+    top: calc(50% - 12px)
+    
+}
+
+.nav-info .nav-item:first-child::before {
+ 
+    display: none;
+}
+
 .social {
 
     display: flex;
     justify-content: space-between;
     padding-top: 100px;
     padding-bottom: 60px;
+    
    
 }
 
-
+.social-item:last-child {
+    position: relative;
+}
 
 .project {
 
@@ -141,10 +237,11 @@ header {
 
     display: flex;
     justify-content: space-between;
+    padding-top: 60px;
 }
 
 .skill-item {
-    flex: 0 0 24%;
+    flex: 0 0 21%;
 }
 
 .skills .title-h3 {
@@ -155,4 +252,107 @@ header {
 .skills .description {
 
    line-height: 150%;
+}
+
+.section-steps {
+
+    padding-top: 180px;
+    padding-bottom: 198px;
+}
+
+.steps-item {
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+     line-height: 150%;
+     padding-top: 15px;
+     padding-bottom: 15px;
+}
+
+.steps-title {
+    font-size: 28px;
+    
+}
+
+.steps-title span {
+
+    margin-right: 45px;
+}
+
+.steps-description {
+    font-size: 16px;
+    flex: 0 0 49%;
+    max-width: 49%;;
+}
+
+
+
+.circle-main {
+    width: 253px;
+    height: 253px;
+    position: absolute;
+    left: -126px;
+    top: calc(50% - 126px) ;
+    z-index: 1;
+}
+ .circle-social {
+
+    width: 106px;
+height: 106px;
+position: absolute;
+right: 38px;
+top: calc(50% - 53px);
+ }
+
+ .triangle {
+    position: absolute;
+    left: -151px;
+    top: 0;
+    z-index: 2;
+    width: 76px;
+    height: 95px;
+ }
+
+
+ .about {
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows:1fr 1fr 1fr;
+}
+
+.about-title {
+
+   grid-column: 1/3;
+   grid-row: 1/2 ;
+}
+
+.about-description {
+
+    grid-column: 3/5 ;
+    grid-row: 1/2 ;
+}
+
+.about-01 {
+
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+
+.about-02 {
+
+    grid-column: 4/5;
+    grid-row: 2/3;
+}
+
+.about-03 {
+
+    grid-column: 3/4;
+    grid-row: 3/4;
+}
+
+.about-04 {
+
+    grid-column: 4/5;
+    grid-row: 3/4;
 }
