--- a/web developer/css/style.css
+++ b/web developer/css/style.css
@@ -68,6 +68,7 @@ body {
 .dark .about-description {
 
     border-bottom: 1px solid #F3F2F0;
+  
    
 }
 .light .steps-item:first-child {
@@ -79,13 +80,6 @@ body {
 
     border-top: 1px solid #F3F2F0;
 }
-
-.dark .about-title, .dark .about-description {
- 
-
-}
-
-
 
 .wrapper {
 
@@ -169,8 +163,8 @@ header {
 
 .nav-link {
     text-decoration: none;
-   
     font-size: 14px;
+    transition: 0.2s color ease;
 }
 
 .nav-link:hover {
@@ -187,6 +181,18 @@ header {
     width: 1px;
     height: 24px;
     background-color: rgba(1, 1, 1, 100%);
+    opacity: 20%;
+    position: absolute;
+    left: 0;
+    top: calc(50% - 12px)
+    
+}
+.dark .nav-info .nav-item::before {
+    content: '';
+    display: block;
+    width: 1px;
+    height: 24px;
+    background-color: rgba(243, 241, 240, 100%);
     opacity: 20%;
     position: absolute;
     left: 0;
@@ -220,17 +226,25 @@ header {
     align-items: center;
     font-size: 16px;
     font-weight: bold;
-
+    transition: 0.2s color ease;
+    padding-bottom: 11px;
+    transition: 0.2s border-bottom ease;
+    border-bottom: 2px solid transparent;
 }
 
-.project-img {
+.project:hover {
+
+   border-bottom: 2px solid #F3F2F0;
+}
+
+.dark .project-img {
 
     width: 16px;
     height: 12px;
     display: block;
     background-image: url(../Portfolio1/img1/photo/Arrow.svg);
     margin-left: 15px;
-
+  
 }
 
 .skills {
@@ -301,7 +315,7 @@ header {
 height: 106px;
 position: absolute;
 right: 38px;
-top: calc(50% - 53px);
+top: calc(50% - 60px);
  }
 
  .triangle {
@@ -317,42 +331,69 @@ top: calc(50% - 53px);
  .about {
 
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows:1fr 1fr 1fr;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: 349px repeat(3, 1fr);
+    
+   
+    
 }
 
 .about-title {
 
    grid-column: 1/3;
    grid-row: 1/2 ;
+   font-size: 28px;
+   letter-spacing: 0.03em;
+   text-transform: uppercase;
+   font-weight: 700;
+   padding-top: 62px;
+    padding: 62px;
+    padding-left: 0;
+
 }
 
 .about-description {
 
-    grid-column: 3/5 ;
-    grid-row: 1/2 ;
+    grid-column: 3/5;
+    grid-row: 1/2;
+    font-size: 28px;
+    color: #F3F2F0;
+    opacity: 80%;
+    line-height: 150%;
+    padding: 62px 10px 62px 20px;
+   
 }
 
 .about-01 {
 
     grid-column: 3/4;
     grid-row: 2/3;
+    padding:65px 30px 35px 20px;
 }
 
 .about-02 {
 
     grid-column: 4/5;
     grid-row: 2/3;
+    padding:65px 10px 35px 10px;
 }
 
 .about-03 {
 
     grid-column: 3/4;
     grid-row: 3/4;
+    padding: 35px 20px;
 }
 
 .about-04 {
 
     grid-column: 4/5;
     grid-row: 3/4;
+    padding: 35px 10px;
+}
+
+.about-item .description {
+    font-size: 14px;
+   line-height: 150%;
+    opacity: 80%;
 }
